[gd_scene load_steps=8 format=3 uid="uid://csowvqc4itosd"]

[ext_resource type="Script" path="res://Settings.gd" id="1_0uq7q"]
[ext_resource type="Script" path="res://MusicVolume.gd" id="1_4il6o"]

[sub_resource type="LabelSettings" id="LabelSettings_81utl"]
font_size = 125

[sub_resource type="LabelSettings" id="LabelSettings_8gl4i"]
font_size = 32

[sub_resource type="LabelSettings" id="LabelSettings_nj06f"]
font_size = 32

[sub_resource type="Theme" id="Theme_i82p8"]
default_font_size = 32

[sub_resource type="Theme" id="Theme_q4tdu"]
default_font_size = 85

[node name="Node2D" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0uq7q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.266667, 0.0823529, 0.607843, 0.407843)

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 58
theme_override_constants/margin_top = 75
theme_override_constants/margin_right = 73
theme_override_constants/margin_bottom = 28

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
text = "Options"
label_settings = SubResource("LabelSettings_81utl")
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="MusicVolume" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 8
max_value = 1.0
step = 0.05
value = 1.0
script = ExtResource("1_4il6o")

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
text = "Music Volume"
label_settings = SubResource("LabelSettings_8gl4i")
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="SFXVolume" type="HSlider" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_vertical = 8
max_value = 1.0
step = 0.05
value = 1.0

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
size_flags_horizontal = 4
text = "SFX Volume
"
label_settings = SubResource("LabelSettings_nj06f")

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/VBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_right = 50

[node name="CheckButton" type="CheckButton" parent="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_i82p8")
text = "Fullscreen"

[node name="Button" type="Button" parent="."]
layout_mode = 2
offset_left = 792.0
offset_top = 952.0
offset_right = 1128.0
offset_bottom = 1076.0
size_flags_horizontal = 4
size_flags_vertical = 8
theme = SubResource("Theme_q4tdu")
text = "   Back   "

[connection signal="value_changed" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer2/SFXVolume" to="." method="_on_sfx_volume_value_changed"]
[connection signal="toggled" from="MarginContainer/VBoxContainer/VBoxContainer/MarginContainer3/CheckButton" to="." method="_on_check_button_toggled"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
